# Active-visual-search

./: README.md
3D_active_search/Search_complete/: CMakeLists.txt  README.txt
3D_active_search/Search_complete/src/: Attention.cpp  Attention.h  Environment.cpp
3D_active_search/Search_complete_ROS/: CMakeLists.txt
3D_active_search/Search_complete_ROS/saliency/src/: Saliency.h
3D_active_search/Search_complete_ROS/saliency/srv/: GetBackProj.srv
3D_active_search/Search_complete_ROS/src/: Attention.cpp  Attention.h  EnvConfig.cpp  EnvConfig.h  Environment.cpp  Environment.h
saliency/: CMakeLists.txt  package.xml
saliency/src/: Saliency.cpp
saliency/srv/: GetAIM.srv
